--- a/technoteplus/requirements.txt
+++ b/technoteplus/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.4.1
 Django==3.2.7
+django-cors-headers==3.8.0
 django-filter==2.4.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 Markdown==3.3.4
 PyJWT==2.1.0
+python-http-client==3.3.2
 pytz==2021.1
+sendgrid==6.8.1
 sqlparse==0.4.2
+starkbank-ecdsa==1.1.1
